--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>jp.co.rakus</groupId>
 	<artifactId>ec-cite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>ec-cite</name>
 	<url>http://maven.apache.org</url>
@@ -70,5 +70,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>ec</finalName>
 	</build>
 </project>
